# django-data-frame

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  pytest.ini
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.code.yml  justfile
.github/workflows/: main.yml
src/django_data_frame/: __init__.py  managers.py
tests/: conftest.py  settings.py  test_data_frame_manager.py  test_data_frame_manager_all.py  test_data_frame_manager_filter.py
tests/test_app/: models.py
