[project]
name = "django-data-frame"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Kamaal Farah", email = "kamaal.f1@gmail.com" }]
dependencies = ["narwhals>=1.9.3", "polars>=1.9.0", "django>=5.1.2"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "pytest-xdist>=3.6.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/django_data_frame"]
